feat: extend PoC with  Symfony + Nelmio
