# backend/apps/core/src/Modules/Login/Requests/LoginRequest.php
@@ -1,10 +1,0 @@
-<?php
-
-declare(strict_types = 1);
-
-namespace Nc\CoreApp\Modules\Login\Requests;
-
-class LoginRequest {
-    public string $username;
-    public string $password;
-}
